# myra-original

./: .gitignore  AUTOMATION_ARCHITECTURE.md  GITHUB_BUILD_SETUP.md  SETUP_GUIDE.md  gradle.properties  settings.gradle
.github/workflows/: build.yml  release.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml  MainActivity.kt
app/src/main/assets/live2d/miara/: ReadMe.txt
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
app/src/main/java/com/maya/assistant/: ForegroundVoiceService.kt  MayaApplication.kt
app/src/main/java/system/: SystemControl.kt
app/src/main/res/drawable/: bg_chat_bot.xml  bg_chat_myra.xml  bg_chat_user.xml  bg_input_dark.xml  bg_mic_button.xml  bg_myra_dot.xml  bg_orb_glow.xml  bg_prime_badge.xml  bg_save_button.xml  bg_voice_card.xml  ic_backspace.xml  ic_launcher_background.xml  ic_mic_on.xml  ic_myra_notif.xml  ic_settings.xml  jarvis_grid.xml  jarvis_mic_bg.xml  pin_button_bg.xml
app/src/main/res/layout/: activity_app_lock.xml  activity_call_assistant.xml  activity_language_settings.xml  activity_main.xml  activity_pattern_setup.xml  activity_settings.xml  activity_voice_settings.xml  dialog_set_pin.xml  dialog_voice_passphrase.xml  item_chat_bot.xml  item_chat_maya.xml  item_chat_myra.xml  overlay_character_3d.xml  overlay_orb.xml
app/src/main/res/mipmap-anydpi-v26/: img.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-crs/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-hinglish/: strings.xml
app/src/main/res/xml/: accessibility_config.xml  accessibility_service_config.xml  device_admin_receiver.xml
app/src/res/layout/: overlay_orb.xml
character_fixes/: INTEGRATION_GUIDE.md
fixed_version/myra-fixed/: AUTOMATION_ARCHITECTURE.md  SETUP_GUIDE.md
fixed_version/myra-fixed/.github/workflows/: release.yml
fixed_version/myra-fixed/app/: proguard-rules.pro
fixed_version/myra-fixed/app/src/main/: AndroidManifest.xml
fixed_version/myra-fixed/app/src/main/java/system/: SystemControl.kt
(+240 files in other folders)
